fixes Field to display message form on right side. Aligns checklist buttons

--- a/src/style/field.css
+++ b/src/style/field.css
@@ -140,6 +140,9 @@ form textarea {
   text-align: center;
 }
 
+.signed {
+  display: none;
+}
 
 
 
